--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1243,6 +1243,12 @@ function main() {
     title="efr2 = &quot;\xE2\x9B\x86&quot;"><wbr />efr2<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#efs2"
     title="efs2 = &quot;\xE2\x96\xA8&quot;"><wbr />efs2<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cfb2"
+    title="cfb2 = &quot;\xE2\x96\xB3&quot;"><wbr />cfb2<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cfb4"
+    title="cfb4 = &quot;\xE2\xAD\x95&quot;"><wbr />cfb4<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cfb5"
+    title="cfb5 = &quot;\xE2\xAC\xA4&quot;"><wbr />cfb5<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#clearbol"
     title="clearbol = &quot;\x1B[1K&quot;"><wbr />clearbol<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cleareol"
@@ -1911,6 +1917,8 @@ function main() {
     title="phone = &quot;\xE2\x98\x8E&quot;"><wbr />phone<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#fullflag"
     title="fullflag = &quot;\xE2\x9A\x91&quot;"><wbr />fullflag<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#enterkey"
+    title="enterkey = &quot;\xE2\x86\xB5&quot;"><wbr />enterkey<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#check"
     title="check = &quot;\xE2\x9C\x93&quot;"><wbr />check<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#xmark"
@@ -2090,6 +2098,21 @@ function main() {
 
 </dd>
 <dt id="efs2"><a name="efs2"></a><pre><span class="Identifier">efs2</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x96\xA8&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="cfb2"><a name="cfb2"></a><pre><span class="Identifier">cfb2</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x96\xB3&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="cfb4"><a name="cfb4"></a><pre><span class="Identifier">cfb4</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\xAD\x95&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="cfb5"><a name="cfb5"></a><pre><span class="Identifier">cfb5</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\xAC\xA4&quot;</span></pre></dt>
 <dd>
 
 
@@ -3482,6 +3505,11 @@ reset colors
 
 
 </dd>
+<dt id="enterkey"><a name="enterkey"></a><pre><span class="Identifier">enterkey</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x86\xB5&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
 <dt id="check"><a name="check"></a><pre><span class="Identifier">check</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x9C\x93&quot;</span></pre></dt>
 <dd>
 
@@ -3697,7 +3725,7 @@ index into colorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-10-08 21:36:25 UTC</small>
+        <small>Made with Nim. Generated: 2017-10-13 21:03:10 UTC</small>
       </div>
     </div>
   </div>
