--- a/nimdataframe.html
+++ b/nimdataframe.html
@@ -1228,13 +1228,15 @@ function main() {
   <li><a class="reference" href="#nimbs"
     title="nimbs = seq[bool]"><wbr />nimbs<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#nimdf"
-    title="nimdf = object
+    title="nimdf = ref object
   df*: seq[nimss]
   hasHeader*: bool
   colcount*: int
   rowcount*: int
-  colcolors*: seq[nimss]
-  colwidths*: seq[nimis]"><wbr />nimdf<span class="attachedType" style="visibility:hidden"></span></a></li>
+  colcolors*: nimss
+  colwidths*: nimis
+  colHeaders*: nimss
+  rowHeaders*: nimss"><wbr />nimdf<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1309,6 +1311,8 @@ function main() {
   <li><a class="reference" href="#createRandomTestData,string,int,bool"
     title="createRandomTestData(filename: string = &quot;nimDfTestData.csv&quot;; datarows: int = 2000;
                      withHeaders: bool = false)"><wbr />create<wbr />Random<wbr />Test<wbr />Data<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#dfRowStats,nimdf,int"
+    title="dfRowStats(df: nimdf; row: int): RunningStat"><wbr />df<wbr />Row<wbr />Stats<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
   <li><a class="reference" href="#dfColumnStats,nimdf,seq[int]"
     title="dfColumnStats(df: nimdf; colseq: seq[int]): seq[RunningStat]"><wbr />df<wbr />Column<wbr />Stats<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
   <li><a class="reference" href="#dfShowColumnStats,nimdf,seq[int],int,int"
@@ -1319,6 +1323,14 @@ function main() {
     title="dfShowSumStats(df: nimdf; numericCols: nimis; xpos = 2)"><wbr />df<wbr />Show<wbr />Sum<wbr />Stats<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
   <li><a class="reference" href="#dfSave,nimdf,string"
     title="dfSave(df: nimdf; filename: string)"><wbr />df<wbr />Save<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#16" id="66">Converters</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#toNimis.c,seq[int]"
+    title="toNimis(s: seq[int]): nimis"><wbr />to<wbr />Nimis<span class="attachedType" style="visibility:hidden">nimis</span></a></li>
 
   </ul>
 </li>
@@ -1380,13 +1392,15 @@ function main() {
 
 
 </dd>
-<dt id="nimdf"><a name="nimdf"></a><pre><span class="Identifier">nimdf</span> <span class="Other">=</span> <span class="Keyword">object</span>
+<dt id="nimdf"><a name="nimdf"></a><pre><span class="Identifier">nimdf</span> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span>
   <span class="Identifier">df</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">nimss</span><span class="Other">]</span>
   <span class="Identifier">hasHeader</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">colcount</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">int</span>
   <span class="Identifier">rowcount</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">int</span>
-  <span class="Identifier">colcolors</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">nimss</span><span class="Other">]</span>
-  <span class="Identifier">colwidths</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">nimis</span><span class="Other">]</span>
+  <span class="Identifier">colcolors</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">nimss</span>
+  <span class="Identifier">colwidths</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">nimis</span>
+  <span class="Identifier">colHeaders</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">nimss</span>
+  <span class="Identifier">rowHeaders</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">nimss</span>
 </pre></dt>
 <dd>
 
@@ -1625,6 +1639,11 @@ function main() {
 
 
 </dd>
+<dt id="dfRowStats"><a name="dfRowStats,nimdf,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dfRowStats</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">row</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">RunningStat</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+
+
+</dd>
 <dt id="dfColumnStats"><a name="dfColumnStats,nimdf,seq[int]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dfColumnStats</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">colseq</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">RunningStat</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
@@ -1675,6 +1694,16 @@ function main() {
 </dd>
 
 </dl></div>
+<div class="section" id="16">
+<h1><a class="toc-backref" href="#16">Converters</a></h1>
+<dl class="item">
+<dt id="toNimis"><a name="toNimis.c,seq[int]"></a><pre><span class="Keyword">converter</span> <span class="Identifier">toNimis</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimis</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+
+
+</dd>
+
+</dl></div>
 
   </div>
 </div>
@@ -1683,7 +1712,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-10-20 20:31:54 UTC</small>
+        <small>Made with Nim. Generated: 2017-10-22 13:20:06 UTC</small>
       </div>
     </div>
   </div>
