--- a/cxutils.html
+++ b/cxutils.html
@@ -1345,6 +1345,8 @@ function main() {
     title="doNimUp(xpos = 5; rev: bool = true)"><wbr />do<wbr />Nim<wbr />Up<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#dayOfWeekJulian,string"
     title="dayOfWeekJulian(datestr: string): string"><wbr />day<wbr />Of<wbr />Week<wbr />Julian<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#clearScreen,"
+    title="clearScreen(): int"><wbr />clear<wbr />Screen<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1855,6 +1857,13 @@ showCpuCores
 
 
 </dd>
+<dt id="clearScreen"><a name="clearScreen,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">clearScreen</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ExecIOEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>clearScreen</p>
+<p>slow clear screen proc using call to Os </p>
+
+
+</dd>
 
 </dl></div>
 <div class="section" id="18">
@@ -1879,7 +1888,7 @@ showCpuCores
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-10-23 23:32:05 UTC</small>
+        <small>Made with Nim. Generated: 2017-10-24 13:26:14 UTC</small>
       </div>
     </div>
   </div>
